--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.0",
     "@expo/webpack-config": "^19.0.0",
+    "@supabase/supabase-js": "^2.38.3",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-splash-screen": "~0.20.5",
