--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-paper": "^5.11.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-web": "~0.19.6",
+    "react-navigation": "^5.0.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
